--- a/src/Pages/css/Home.css
+++ b/src/Pages/css/Home.css
@@ -8,7 +8,7 @@ body {
 	background-repeat: no-repeat;
 	color: #f5f5f5;
 	display: flex;
-	flex-direction: column;
+	/* flex-direction: column; */
 	align-items: center;
 	min-height: 100vh;
 }
@@ -17,40 +17,46 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 40px 20px;
-	min-height: 100vh;
+	/* min-height: 100vh; */
 	width: 100%;
-	max-width: 1200px;
+	/* max-width: 1200px; */
 }
 
 .title-container {
-	width: 100%;
-	padding: 100px 20px;
+
+	width: 90%;
+	padding: 100px 50px;
 	text-align: center;
 	color: #fff;
 	background: rgba(0, 0, 0, 0.8);
 	border-radius: 12px;
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
 	margin-bottom: 40px;
+	margin-top: 50px;
+	align-items: center;
+	border-right: #008dbf 5px solid;
 }
 
 .animated-title {
 	font-size: 3rem;
 	font-weight: bold;
 	color: #00c4ff;
-	text-align: center;
+	text-align: right;
 	margin-bottom: 20px;
+	 
+	border-right: #00c4ff 5px solid;
 }
 
 .intro-text {
 	font-size: 1.3rem;
 	color: #ddd;
-	text-align: center;
+	text-align: right;
 	margin-bottom: 20px;
+	border-right: #00c4ff 5px solid;
 }
 
 .sorting-algorithms-container {
-	width: 100%;
+	width: 95%;
 	padding: 40px 20px;
 	background-color: #222;
 	color: #f5f5f5;
