--- a/src/Pages/Logarithmic/merge/MergeSortVisualizer.css
+++ b/src/Pages/Logarithmic/merge/MergeSortVisualizer.css
@@ -5,7 +5,8 @@
 	background-color: #1a1a1a;
 	min-height: 100vh;
 	padding: 20px;
-	color: #ffffff;
+	color: #333;
+	;
 }
 
 h1 {
@@ -26,7 +27,8 @@ h1 {
 	flex-direction: column;
 	align-items: center;
 	font-size: 14px;
-	color: #ffffff;
+	color: #333;
+	;
 }
 
 .controls input[type="number"],
@@ -34,9 +36,11 @@ h1 {
 	width: 80px;
 	margin-top: 5px;
 	padding: 5px;
-	border: 1px solid #ffffff;
+	border: 1px solid#333;
+	;
 	background-color: #333;
-	color: #ffffff;
+	color: #333;
+	;
 	border-radius: 4px;
 	text-align: center;
 }
@@ -49,7 +53,8 @@ button {
 	border-radius: 4px;
 	cursor: pointer;
 	background-color: #45a29e;
-	color: #ffffff;
+	color: #333;
+	;
 	transition: background-color 0.3s ease;
 }
 
