--- a/src/Pages/css/Home.css
+++ b/src/Pages/css/Home.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'Helvetica Neue', sans-serif;
 	margin: 0;
 	padding: 0;
-	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../images/1.jpg");
+	/* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../images/1.jpg"); */
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -43,7 +43,7 @@ body {
 	color: #00c4ff;
 	text-align: right;
 	margin-bottom: 20px;
-	 
+
 	border-right: #00c4ff 5px solid;
 }
 
